--- a/api/.env
+++ b/api/.env
@@ -1,9 +1,4 @@
 PORT=3000
-
-DB_HOST=mysql-chtitski.alwaysdata.net
-DB_DRIVER=mysql
-DB_NAME=chtitski_todolist
-DB_USER=chtitski
-DB_PASSWORD=(toDoList)
-DB_PORT=3306
-
+DB_CONN_STRING="mongodb+srv://admin:admin@cluster0.sn8tt.mongodb.net/Cluster0?retryWrites=true&w=majority"
+DB_NAME="Cluster0"
+MFIX_COLLECTION_NAME="sample_mfix"
