--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -29,7 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.4
+  dio: ^4.0.4
   video_player: ^2.2.3
+  file_picker: ^4.5.1
 video_player: ^2.1.15
 
 dev_dependencies:
