--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -27,9 +27,9 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.debug=false
 
-amazon.aws.access-key=AKIATX7LF4WBVAUUYUEV
-amazon.aws.secret-key=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
-amazon.s3.bucket.name=sav-reddit-bucket
+amazon.aws.access-key=AKIAQFFV6VCQLCVC6VBD
+amazon.aws.secret-key=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
+amazon.s3.bucket.name=bucket-sav-reddit
 
 recaptcha.secret=6Lc5cLkZAAAAANUjd4--Jx6PioSC_N-9MFKT3PsA
 recaptcha.url=https://www.google.com/recaptcha/api/siteverify?secret=%s&response=%s
