--- a/api/pom.xml
+++ b/api/pom.xml
@@ -18,6 +18,8 @@
         <java.version>11</java.version>
         <sonar.organization>hlimam</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
